Name:           cmc
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD4
License-File:   LICENSE
Copyright:      (c) Michael Melanson 2009
Synopsis:       Compiler for the C-Minus language
Description:    cmc is a compiler for the C-Minus language. Includes IPPrint
		written by Gleb Alexeyev <gleb.alexeev@gmail.com>.
Maintainer:     Michael Melanson <michael@michaelmelanson.net>
Stability:      experimental
Category:       Compiler
Extra-Source-Files: Makefile, README, doc/report1.pdf

Executable cm-test
        Main-Is:        Tests.hs
        Other-Modules:  Compiler.Parser,
                        Compiler.Scanner,
                        Compiler.Syntax
        Build-Depends:  parsec >= 2.1,
                        base


Executable cm
        Main-Is:        Parse.hs
        Other-Modules:  Compiler.Parser,
                        Compiler.Scanner,
                        Compiler.Syntax,
                        IPPrint
        Build-Depends:  haskell98,
                        haskell-src >= 1.0.1
        GHC-Options:    -prof -auto-all